Fix post-mortem nits for r173528 & r173549 https://bugs.webkit.org/show_bug.cgi?id=136808

Reviewed by Darin Adler.

Fix post-mortem nits for r173528 & r173549.

No new tests, no behavior change.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::alternativeTextForWebArea):
- Use auto* instead of more specific types.
- Use fastGetAttribute() instead of getAttribute() as this is
  supported for the "title" attribute.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::setSelectionFromNone):
Use auto* instead of more specific types.


Canonical link: https://commits.webkit.org/154641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173613 268f45cc-cd09-0410-ab3c-d52691b4dbfc